nenolod     2005/09/05 04:00:50 UTC	(20050905-2157)
  Log:
  Fix a crash issue with ACC <nick that does not exist.>
  

  Modified:
	trunk/modules/nickserv/status.c (File Modified) 


nenolod     2005/09/05 03:49:21 UTC	(20050905-2155)
  Log:
  Fix a minor error here, I fixed this a while ago but forgot to commit.
  

  Modified:
	trunk/modules/operserv/modinspect.c (File Modified) 


nenolod     2005/09/05 02:12:42 UTC	(20050905-2153)
  Log:
  Update documentation.
  

  Modified:
	trunk/dist/example.conf (File Modified) 


nenolod     2005/09/05 02:10:48 UTC	(20050905-2151)
  Log:
  Add /os modinspect command.
  

  Modified:
	trunk/modules/operserv/Makefile.in (File Modified) 
	trunk/modules/operserv/modinspect.c (File Added) 


nenolod     2005/09/05 01:55:54 UTC	(20050905-2149)
  Log:
  Fix some warnings.
  

  Modified:
	trunk/include/sockio.h (File Modified) 
	trunk/libatheme/linker.c (File Modified) 


nenolod     2005/09/05 01:46:10 UTC	(20050905-2147)
  Log:
  Update protocol components.
  

  Modified:
	trunk/protocol/asuka.c (File Modified) 
	trunk/protocol/bahamut.c (File Modified) 
	trunk/protocol/bircd.c (File Modified) 
	trunk/protocol/dreamforge.c (File Modified) 
	trunk/protocol/hyperion.c (File Modified) 
	trunk/protocol/inspircd.c (File Modified) 
	trunk/protocol/ircnet.c (File Modified) 
	trunk/protocol/monkey.c (File Modified) 
	trunk/protocol/plexus.c (File Modified) 
	trunk/protocol/ptlink.c (File Modified) 
	trunk/protocol/ratbox.c (File Modified) 
	trunk/protocol/scylla.c (File Modified) 
	trunk/protocol/shadowircd.c (File Modified) 
	trunk/protocol/sorcery.c (File Modified) 
	trunk/protocol/undernet.c (File Modified) 
	trunk/protocol/unreal.c (File Modified) 


nenolod     2005/09/05 01:40:07 UTC	(20050905-2145)
  Log:
  Update backend modules, module header.
  

  Modified:
	trunk/backend/flatfile.c (File Modified) 
	trunk/backend/mysql.c (File Modified) 
	trunk/backend/postgresql.c (File Modified) 