@@ -16,7 +16,7 @@ DECLARE_MODULE_V1
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
-static void os_cmd_modinspect(char *origin);
+static void os_cmd_modinspect(char *origin, char *mname);
 
 list_t *os_cmdtree;
 
@@ -33,7 +33,7 @@ void _moddeinit(void)
 	command_delete(&os_modinspect, os_cmdtree);
 }
 
-static void os_cmd_modinspect(char *origin)
+static void os_cmd_modinspect(char *origin, char *mname)
 {
 	char *mname = strtok(NULL, " ");
 	module_t *m;
@@ -49,14 +49,14 @@ static void os_cmd_modinspect(char *origin)
 
 	if (!m)
 	{
-		notice(opersvs.nick, origin, "\2%s\2 is not loaded.");
+		notice(opersvs.nick, origin, "\2%s\2 is not loaded.", mname);
 		return;
 	}
 
 	/* Is there a header? */
 	if (!m->header)
 	{
-		notice(opersvs.nick, origin, "\2%s\2 cannot be inspected.");
+		notice(opersvs.nick, origin, "\2%s\2 cannot be inspected.", mname);
 		return;
 	}
 
