@@ -1,3 +1,12 @@
+nenolod     2005/09/05 04:05:51 UTC	(20050905-2159)
+  Log:
+  Update code.
+  
+
+  Modified:
+	trunk/modules/nickserv/status.c (File Modified) 
+
+
 nenolod     2005/09/05 04:00:50 UTC	(20050905-2157)
   Log:
   Fix a crash issue with ACC <nick that does not exist.>
